@@ -1,3 +1,3 @@
 1 US TABLE FLUX ALL "flow.dat" /
-1 IN DEAD  CELL  181 181 1  15 /
+1 IN WALL  UVEL 182 1  15 /
 1 DS TABLE ELEV ALL "stage.dat" /
