@@ -13,18 +13,18 @@ F			read_hotstart_file	! read in a binary hotstart file "hotstart.bin"
 T			do gage print
 T F			given_initial_wsel	! if TRUE then wsel_or_depth_initial is the initial water elv.; depth if FALSE
 04-01-1996 00:00:00	start date & time
-04-01-1996 00:04:59	end date & time
+04-01-1996 00:05:00	end date & time
 0.25		delta_t 	! time step (seconds)
 5 0.001		number_hydro_iterations, max_mass_source_sum	! number of internal iterations at a fixed time level
 2			number_scalar_iterations
 2			scalar_sweep	! internal iterations
-15			depth_sweep
+25			depth_sweep
 1.292e-02 F		eddy viscosity (0.0012 m^2/s)
 0.20001 F		kx_diff		! diffusion coeff in xsi (ft^2/sec)
 0.50001 F		ky_diff		! diffusion coeff in eta (ft^2/sec)
 0.0100 F			chezy_con	! manning n value if manning=TRUE
 1.49			mann_con	! constant in the bed shear stress  =1.0 if metric units, 1.49*1.49 for english
-0.10			relax_dp	! relaxation factor for depth corrections
+0.20			relax_dp	! relaxation factor for depth corrections
 0.0			inlet_flow	! uniform inlet flow rate in non spill/non gen areas
 0.62		ds_elev		! downstream water elevation bc (feet) (changed from 638  CR 3/30/99
 0.0			uvel_initial	! initial uniform value of u velocity
