@@ -136,7 +136,7 @@ $!TWODAXIS
     {
     AXISPOSITION = 6.667
     RANGEMIN = -0.247515670557
-    RANGEMAX = 18.7187279669
+    RANGEMAX = 18.7187306398
     GRSPACING = 2
     TICKLABEL
       {
@@ -243,7 +243,7 @@ $!GLOBALSTREAM
     }
   ADDARROWS = NO
   LINETHICKNESS = 0.02
-  MAXSTEPS = 5000
+  MAXSTEPS = 3000
 $!FIELDLAYERS 
   SHOWMESH = NO
 $!ATTACHGEOM 
